[gd_scene load_steps=28 format=4 uid="uid://l3h1omftwgbq"]

[ext_resource type="Texture2D" uid="uid://601gscsocotc" path="res://BackgroundGrassGreen.png" id="1_glv2v"]
[ext_resource type="Script" uid="uid://b21fxb17g684l" path="res://camera_2d.gd" id="2_fos0i"]
[ext_resource type="PackedScene" uid="uid://t7s51ko8pf4i" path="res://Player.tscn" id="2_uu6xs"]
[ext_resource type="PackedScene" uid="uid://bdq4qtvbwlb6s" path="res://boomerang_spawner.tscn" id="3_c6i3y"]
[ext_resource type="Script" uid="uid://b56jh7i4ny5f4" path="res://enemy_spawner.gd" id="3_r0du0"]
[ext_resource type="PackedScene" uid="uid://cmw87e4wkt6fw" path="res://enemy.tscn" id="4_cm0pq"]
[ext_resource type="Texture2D" uid="uid://pibkp28dhc8s" path="res://Objects.png" id="6_3dxm6"]
[ext_resource type="Script" uid="uid://bfx530whnsdun" path="res://RockSpawner.gd" id="7_lgr22"]
[ext_resource type="PackedScene" uid="uid://c0lxpvd8vdw2m" path="res://rock.tscn" id="8_trn2v"]
[ext_resource type="PackedScene" uid="uid://647wusgghmc7" path="res://InGameUI.tscn" id="9_03owx"]
[ext_resource type="Script" uid="uid://bvwphfmafw2rq" path="res://game_manager.gd" id="10_wkp8b"]
[ext_resource type="PackedScene" uid="uid://c1ug25i7mspni" path="res://rock_spin_attack_object.tscn" id="11_5vvyt"]
[ext_resource type="PackedScene" uid="uid://bf6afkbnfbd2y" path="res://rock_spin_attack.tscn" id="11_20pc6"]
[ext_resource type="Script" uid="uid://dqka25ipafoo" path="res://death_ui.gd" id="14_fpfj3"]
[ext_resource type="Script" uid="uid://cx7cov7irhuik" path="res://boomerang_spawner_spawner.gd" id="14_j4qnp"]

[sub_resource type="Theme" id="Theme_5vvyt"]

[sub_resource type="ImageTexture" id="ImageTexture_c6i3y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vvyt"]
bg_color = Color(0.0901961, 0.12549, 0.219608, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.117647, 0.113725, 0.223529, 1)
expand_margin_top = 9.0
expand_margin_bottom = 9.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6i3y"]
bg_color = Color(0.45098, 0.745098, 0.827451, 1)
border_width_right = 2
border_color = Color(0.117647, 0.113725, 0.223529, 1)
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lgr22"]
texture = ExtResource("6_3dxm6")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_trn2v"]
sources/0 = SubResource("TileSetAtlasSource_lgr22")

[sub_resource type="Theme" id="Theme_c2ibq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4qnp"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.45098, 0.745098, 0.827451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c2ibq"]
bg_color = Color(0.178953, 0.1734, 0.34, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpfj3"]
bg_color = Color(0.117647, 0.113725, 0.223529, 1)

[sub_resource type="Theme" id="Theme_j4qnp"]

[sub_resource type="Environment" id="Environment_fpfj3"]
background_mode = 3
glow_enabled = true
glow_intensity = 0.0
glow_blend_mode = 0

[node name="Node2D" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(100, 100)
texture = ExtResource("1_glv2v")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
rotation_smoothing_enabled = true
script = ExtResource("2_fos0i")

[node name="Control" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2

[node name="HSlider2" type="HSlider" parent="Camera2D/Control"]
z_index = 10
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -69.0
offset_right = 248.0
offset_bottom = -47.0
grow_horizontal = 0
grow_vertical = 2
rotation = -3.14159
scale = Vector2(1, 0.655)
theme = SubResource("Theme_5vvyt")
theme_override_icons/grabber_disabled = SubResource("ImageTexture_c6i3y")
theme_override_styles/slider = SubResource("StyleBoxFlat_5vvyt")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_c6i3y")
value = 100.0
editable = false
scrollable = false

[node name="Player" parent="." instance=ExtResource("2_uu6xs")]

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("3_r0du0")
initial_spawn_rate = 3.0
spawn_rate_increase = 0.98
min_spawn_rate = 0.01
enemy_scene = ExtResource("4_cm0pq")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAAHAP3/AAADAAAAAAACAPr/AAADAAAAAAD9//z/AAADAAAAAAAMAPn/AAADAAAAAAATAPj/AAADAAAAAAAVAP//AAADAAAAAAAMAAgAAAADAAAAAADx/wgAAAADAAAAAADp/+j/AAADAAAAAAAGAO3/AAADAAAAAAD8/xIAAAADAAAAAADv/xYAAAADAAAAAADs/w4AAAADAAAAAAAOABQAAAADAAAAAAADAAsAAAADAAAAAAARAA0AAAAEAAAAAADx////AAAEAAAAAAD6//L/AAAEAAAAAADp//n/AAAEAAAAAAAVABUAAAAEAAAAAAAJAAwAAAAEAAAAAAAHABAAAAAEAAAAAAD6/w0AAAAEAAAAAAADAAQAAAAEAAAAAAD5/wkAAAAEAAAAAAD7//3/AAAEAAAAAAADAPH/AAAEAAAAAAALAPT/AAAEAAAAAAAUAAIAAAAEAAAAAAAPAP//AAAEAAAAAADz//j/AAAEAAAAAADx//L/AAAEAAAAAAA=")
tile_set = SubResource("TileSet_trn2v")

[node name="RockSpawner" type="Node2D" parent="." node_paths=PackedStringArray("game_manager")]
script = ExtResource("7_lgr22")
rock_scene = ExtResource("8_trn2v")
game_manager = NodePath("../GameManager")

[node name="GameManager" type="Node2D" parent="." node_paths=PackedStringArray("ability_slider", "spinner", "boomerang_spawner")]
script = ExtResource("10_wkp8b")
ability_slider = NodePath("../Camera2D/Control/HSlider2")
spinner = NodePath("../RockSpinAttack")
boomerang_spawner = NodePath("../BoomerangSpawnerSpawner")
rock_scene = ExtResource("11_5vvyt")
max_ability_value = 180.0
max_ability_value_multiplier = 1.8

[node name="RockSpinAttack" parent="." node_paths=PackedStringArray("game_manager") instance=ExtResource("11_20pc6")]
spin_speed = 300.0
offset = 20.0
game_manager = NodePath("../GameManager")

[node name="rock" parent="." node_paths=PackedStringArray("game_manager") instance=ExtResource("8_trn2v")]
position = Vector2(0, -21)
game_manager = NodePath("../GameManager")

[node name="BoomerangSpawnerSpawner" type="Node2D" parent="." node_paths=PackedStringArray("game_manager")]
script = ExtResource("14_j4qnp")
game_manager = NodePath("../GameManager")
boomerang_spawner = ExtResource("3_c6i3y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2

[node name="deathUI" type="Panel" parent="CanvasLayer/Control" node_paths=PackedStringArray("death_stats")]
z_index = 11
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_fpfj3")
death_stats = NodePath("Label")

[node name="Button" type="Button" parent="CanvasLayer/Control/deathUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = 90.0
offset_right = -15.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_c2ibq")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_j4qnp")
theme_override_styles/hover = SubResource("StyleBoxFlat_c2ibq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j4qnp")
theme_override_styles/normal = SubResource("StyleBoxFlat_fpfj3")
text = "TryAgain"
autowrap_mode = 1

[node name="Label2" type="Label" parent="CanvasLayer/Control/deathUI"]
layout_mode = 0
offset_left = 159.0
offset_right = 479.0
offset_bottom = 105.0
theme = SubResource("Theme_j4qnp")
theme_override_font_sizes/font_size = 50
text = "You Died"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="CanvasLayer/Control/deathUI"]
layout_mode = 0
offset_left = 159.0
offset_top = 105.0
offset_right = 479.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="CanvasLayer/Control/deathUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 90.0
offset_right = 295.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_c2ibq")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_j4qnp")
theme_override_styles/hover = SubResource("StyleBoxFlat_c2ibq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j4qnp")
theme_override_styles/normal = SubResource("StyleBoxFlat_fpfj3")
text = "Exit
"
autowrap_mode = 1

[node name="CardUI" type="Panel" parent="CanvasLayer/Control"]
visible = false
z_index = 11
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Card1Button" type="Button" parent="CanvasLayer/Control/CardUI"]
z_index = 25
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 86.5
offset_top = 25.0
offset_right = 299.5
offset_bottom = -25.0
grow_vertical = 2
theme = SubResource("Theme_c2ibq")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 19
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_j4qnp")
theme_override_styles/hover = SubResource("StyleBoxFlat_c2ibq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j4qnp")
theme_override_styles/normal = SubResource("StyleBoxFlat_fpfj3")
action_mode = 0
text = "Spin the rock around, will loop around you forever, dealing 20 damage to enemies on contact"
autowrap_mode = 2

[node name="Card2Button" type="Button" parent="CanvasLayer/Control/CardUI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -299.5
offset_top = 25.0
offset_right = -86.5
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_c2ibq")
theme_override_font_sizes/font_size = 19
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_j4qnp")
theme_override_styles/hover = SubResource("StyleBoxFlat_c2ibq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j4qnp")
theme_override_styles/normal = SubResource("StyleBoxFlat_fpfj3")
text = "You throw the rock in a random direction, loops every 2 seconds, insta kills enemies on contact"
autowrap_mode = 3

[node name="Control2" parent="CanvasLayer" instance=ExtResource("9_03owx")]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fpfj3")

[connection signal="pressed" from="CanvasLayer/Control/deathUI/Button" to="GameManager" method="_on_card_2_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/deathUI/Button2" to="GameManager" method="_on_card_2_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CardUI/Card1Button" to="GameManager" method="_on_card_1_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CardUI/Card2Button" to="GameManager" method="_on_card_2_button_pressed"]
